# ghc-typelits-presburger

./: .dir-locals.el  .gitignore  .gitmodules  .mergify.yml  .travis.yml  CLAUDE.md  README.md  TAGS  cabal.project  ghc-typelits-presburger.cabal  hie.yaml  package.yaml  stack-8.10.4.yaml  stack-8.10.7.yaml  stack-8.6.5.yaml  stack-8.8.4.yaml  stack-800.yaml  stack-802.yaml  stack-804.yaml  stack-806.yaml  stack-808.yaml  stack-810.yaml  stack-9.0.1.yaml  stack-9.0.2.yaml  stack-9.2.1.yaml  stack-9.2.2.yaml  stack-9.2.4.yaml  stack-9.4.1.yaml  stack-9.4.3.yaml  stack-ghc800.yaml  stack-head.yaml  stack.yaml
.github/workflows/: haskell.yml
ci-configs/: ghc-8.10.7.config  ghc-8.6.5.config  ghc-8.8.4.config  ghc-9.0.2.config  ghc-9.10.1.config  ghc-9.10.2.config  ghc-9.12.1.config  ghc-9.12.2.config  ghc-9.2.7.config  ghc-9.2.8.config  ghc-9.4.4.config  ghc-9.4.8.config  ghc-9.6.1.config  ghc-9.6.3.config  ghc-9.6.7.config  ghc-9.8.1.config  ghc-9.8.4.config
ci-scripts/: collect-artifacts.sh
examples/: simple-arith  simple-arith.hs
ghc-typelits-meta/: .gitignore  ChangeLog.md  LICENSE  README.md  package.yaml
ghc-typelits-presburger/: .gitignore  Changelog.md  README.md  ghc-typelits-presburger.cabal  hie.yaml  package.yaml
ghc-typelits-presburger-core/: LICENSE  package.yaml
ghc-typelits-presburger-core/examples/: simple-arith-core.hs
ghc-typelits-presburger-core/src/Data/Integer/: SAT.hs
ghc-typelits-presburger-core/src/GHC/: Compat.hs
ghc-typelits-presburger-core/src/GHC/TypeLits/Presburger/: Compat.hs  Core.hs
ghc-typelits-presburger-core/src/GHC/TypeLits/Presburger/Syntax/: Base.hs  Translate.hs
ghc-typelits-presburger/examples/: simple-arith-core.hs  simple-arith.hs
ghc-typelits-presburger/src/Data/Integer/: SAT.hs
ghc-typelits-presburger/src/GHC/: Compat.hs
ghc-typelits-presburger/src/GHC/TypeLits/: Presburger.hs
ghc-typelits-presburger/src/GHC/TypeLits/Presburger/: Compat.hs  Flags.hs  Syntax.hs  Types.hs
ghc-typelits-presburger/src/GHC/TypeLits/Presburger/Syntax/: Base.hs  Core.hs  TH.hs  Translate.hs
ghc-typelits-presburger/test/: ErrorsNoPlugin.hs  ErrorsWithPlugin.hs  Shared.hs
ghc-typelits-presburger/test/GHC/TypeLits/: PresburgerSpec.hs
presburger/: .hlint.yaml  .travis.yml  stack-800.yaml
presburger/examples/: simple-arith.hs
presburger/src/GHC/TypeLits/: Presburger.hs
singletons-presburger/: Changelog.md  README.md  hie.yaml  package.yaml  singletons-presburger.cabal
singletons-presburger/examples/: simple-arith.hs
singletons-presburger/src/Data/Singletons/TypeNats/: Presburger.hs
src/Data/Integer/: SAT.hs
src/GHC/: Compat.hs
src/GHC/TypeLits/: Presburger.hs
