cabal-version: 3.4
name: singletons-presburger
version: 0.7.4.1
synopsis: Presburger Arithmetic Solver for GHC Type-level natural numbers with Singletons package.
description:
  The @singletons-presburger@ plugin augments GHC type-system with Presburger
  Arithmetic Solver for Type-level natural numbers, with integration with <https://hackage.haskell.org/package/singletons singletons> package.
  .
  You can use by adding this package to @dependencies@ and add the following pragma
  to the head of .hs files:
  .
  > OPTIONS_GHC -fplugin Data.Singletons.TypeNats.Presburger

category: Math, Type System
homepage: https://github.com/konn/ghc-typelits-presburger#readme
bug-reports: https://github.com/konn/ghc-typelits-presburger/issues
author: Hiromi ISHII
maintainer: konn.jinro _at_ gmail.com
copyright: 2015-2025 (c) Hiromi ISHII
license: BSD-3-Clause
license-file: LICENSE
tested-with:
  ghc ==9.6.7
  ghc ==9.8.4
  ghc ==9.10.2
  ghc ==9.12.2

extra-source-files: Changelog.md
build-type: Simple

source-repository head
  type: git
  location: https://github.com/konn/ghc-typelits-presburger

flag examples
  description: Builds example
  manual: False
  default: False

common defaults
  autogen-modules: Paths_singletons_presburger
  other-modules: Paths_singletons_presburger
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

library
  import: defaults
  exposed-modules: Data.Singletons.TypeNats.Presburger
  hs-source-dirs: src
  build-depends:
    base >=4.7 && <5,
    ghc,
    ghc-typelits-presburger >=0.4,
    mtl,
    reflection,
    singletons,
    singletons-base >=3.0,
    transformers,

executable simple-arith
  import: defaults
  main-is: simple-arith.hs
  hs-source-dirs: examples
  ghc-options:
    -Wall
    -Wno-dodgy-imports
    -Wno-unused-imports

  build-depends:
    base,
    equational-reasoning,
    singletons,
    singletons-base >=3.0,
    singletons-presburger,
    singletons-th,

  if !(flag(examples))
    buildable: False
